AC_INIT(librpims, 1.0.0, Brian Molnar <brian.molnar@gmail.com>)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE

# checks for programs
AC_PROG_LIBTOOL
AC_PROG_CC
AM_PROG_CC_C_O

# checks for libraries

# checks for header files

# checks for types

# checks for structures

# checks for compiler characteristics

# checks for library functions

# checks for system services

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
